@@ -5,13 +5,18 @@ import io.mosip.certify.core.dto.CredentialStatusResponse;
 import io.mosip.certify.core.exception.CertifyException;
 import io.mosip.certify.core.spi.CredentialLedgerService;
 import io.mosip.certify.entity.Ledger;
+import io.mosip.certify.entity.attributes.CredentialStatusDetail;
 import io.mosip.certify.repository.LedgerRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
+import java.time.Instant;
+import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
+import java.time.ZoneOffset;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -33,7 +38,11 @@ public class CredentialLedgerServiceImpl implements CredentialLedgerService {
             }
 
             return records.stream()
-                    .map(this::mapToSearchResponse)
+                    .map(record -> {
+                        CredentialStatusResponse response = mapToSearchResponse(record);
+                        response.setIssuanceDate(null); // Set issuanceDate as null
+                        return response;
+                    })
                     .collect(Collectors.toList());
 
         } catch (Exception e) {
@@ -45,37 +54,30 @@ public class CredentialLedgerServiceImpl implements CredentialLedgerService {
         CredentialStatusResponse response = new CredentialStatusResponse();
         response.setCredentialId(record.getCredentialId());
         response.setIssuerId(record.getIssuerId());
-        response.setIssueDate(record.getIssueDate().toLocalDateTime());
-        response.setExpirationDate(record.getExpirationDate() != null ? record.getExpirationDate().toLocalDateTime() : null);
+        response.setIssueDate(record.getIssuanceDate());
+        response.setIssuanceDate(record.getIssuanceDate());
+        response.setExpirationDate(record.getExpirationDate() != null ? record.getExpirationDate() : null);
         response.setCredentialType(record.getCredentialType());
-        List<Map<String, Object>> statusDetails = record.getCredentialStatusDetails();
+        List<CredentialStatusDetail> statusDetails = record.getCredentialStatusDetails();
         if (statusDetails != null && !statusDetails.isEmpty()) {
-            Map<String, Object> latestStatus = statusDetails.get(0);
-            Object statusListCredentialId = latestStatus.get("status_list_credential_id");
-            Object statusListIndex = latestStatus.get("status_list_index");
-            Object statusPurpose = latestStatus.get("status_purpose");
-            Object createdDtimes = latestStatus.get("cr_dtimes");
+            CredentialStatusDetail latestStatus = statusDetails.stream()
+                                       .filter(s -> s.getCreatedTimes() != null)
+                                        .max(Comparator.comparingLong(CredentialStatusDetail::getCreatedTimes))
+                                       .orElse(statusDetails.getFirst());
 
-            if (statusListCredentialId != null) {
-                response.setStatusListCredentialUrl(statusListCredentialId.toString());
-            }
+            String statusListCredentialId = latestStatus.getStatusListCredentialId();
+            Long statusListIndex = latestStatus.getStatusListIndex();
+            String statusPurpose = latestStatus.getStatusPurpose();
+            Long createdDtimes = latestStatus.getCreatedTimes();
 
-            if (statusListIndex instanceof Number) {
-                Long index = ((Number) statusListIndex).longValue();
-                response.setStatusListIndex(index);
-            }
-
-            if (statusPurpose != null) {
-                response.setStatusPurpose(statusPurpose.toString());
-            }
-
-            if (createdDtimes instanceof Number) {
-                long timestampMillis = ((Number) createdDtimes).longValue();
-                OffsetDateTime createdDateTime = OffsetDateTime.ofInstant(
-                        java.time.Instant.ofEpochMilli(timestampMillis),
-                        java.time.ZoneOffset.UTC
-                );
-                response.setStatusTimestamp(createdDateTime.toLocalDateTime());
+            response.setStatusListCredentialUrl(statusListCredentialId);
+            response.setStatusListIndex(statusListIndex);
+            response.setStatusPurpose(statusPurpose);
+            if (createdDtimes != null) {
+                LocalDateTime ts = LocalDateTime.ofInstant(
+                        Instant.ofEpochMilli(createdDtimes),
+                        ZoneOffset.UTC);
+                response.setStatusTimestamp(ts);
             }
         }
         return response;
@@ -91,6 +93,29 @@ public class CredentialLedgerServiceImpl implements CredentialLedgerService {
 
         if (!hasValid) {
             throw new CertifyException("INVALID_SEARCH_CRITERIA");
+        }
+    }
+
+    @Override
+    public List<CredentialStatusResponse> searchCredentialLedgerV2(CredentialLedgerSearchRequest request) {
+        validateSearchRequest(request);
+        try {
+            List<Ledger> records = ledgerRepository.findBySearchRequest(request);
+
+            if (records.isEmpty()) {
+                return Collections.emptyList();
+            }
+
+            return records.stream()
+                    .map(record -> {
+                        CredentialStatusResponse response = mapToSearchResponse(record);
+                        response.setIssueDate(null); // Set issueDate as null
+                        return response;
+                    })
+                    .collect(Collectors.toList());
+
+        } catch (Exception e) {
+            throw new CertifyException("SEARCH_CREDENTIALS_FAILED");
         }
     }
 }
